Fix cross-jdk issue